--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lgf/markdown",
+    "name": "palauaandsons/nova-simplemde-field",
     "description": "A Laravel Nova field.",
     "keywords": [
         "laravel",
