--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/dist/js/markdown.js": "/dist/js/markdown.js",
-    "/dist/css/markdown.css": "/dist/css/markdown.css"
+    "/dist/js/simplemde.js": "/dist/js/simplemde.js",
+    "/dist/css/simplemde.css": "/dist/css/simplemde.css"
 }
