Remove unused scss stuff.

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,3 @@
 {
-    "/dist/js/simplemde.js": "/dist/js/simplemde.js",
-    "/dist/css/simplemde.css": "/dist/css/simplemde.css"
+    "/dist/js/simplemde.js": "/dist/js/simplemde.js"
 }
