Revert "Remove unused scss stuff."
This reverts commit 8c93e00adf8951185ead89f7bc229141e372b4aa.

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,3 +1,4 @@
 {
-    "/dist/js/simplemde.js": "/dist/js/simplemde.js"
+    "/dist/js/simplemde.js": "/dist/js/simplemde.js",
+    "/dist/css/simplemde.css": "/dist/css/simplemde.css"
 }
