--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     },
     "devDependencies": {
         "cross-env": "^5.0.0",
-        "laravel-mix": "^1.0",
-        "laravel-nova": "^1.0"
+        "laravel-mix": "^5.0.1",
+        "laravel-nova": "^1.0",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.24.4",
+        "sass-loader": "^8.0.2",
+        "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
         "simplemde": "^1.11.2",
-        "vue": "^2.5.0"
+        "vue": "^2.6.11"
     }
 }
