--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,30 @@
 {
-    "name": "palauaandsons/nova-simplemde-field",
-    "description": "A SimpleMDE field for Laravel Nova.",
-    "keywords": [
-        "laravel",
-        "nova"
-    ],
-    "license": "MIT",
-    "require": {
-        "php": ">=7.1.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "PalauaAndSons\\SimpleMDEField\\": "src/"
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "PalauaAndSons\\SimpleMDEField\\FieldServiceProvider"
-            ]
-        }
-    },
-    "config": {
-        "sort-packages": true
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+	"name": "palauaandsons/nova-simplemde-field",
+	"description": "A SimpleMDE field for Laravel Nova.",
+	"keywords": [
+		"laravel",
+		"nova"
+	],
+	"license": "MIT",
+	"require": {
+		"php": "^8.0",
+		"laravel/nova": "^4.0"
+	},
+	"autoload": {
+		"psr-4": {
+			"PalauaAndSons\\SimpleMDEField\\": "src/"
+		}
+	},
+	"extra": {
+		"laravel": {
+			"providers": [
+				"PalauaAndSons\\SimpleMDEField\\FieldServiceProvider"
+			]
+		}
+	},
+	"config": {
+		"sort-packages": true
+	},
+	"minimum-stability": "dev",
+	"prefer-stable": true
 }
